changed confirmation cues

--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -120,8 +120,8 @@
                     </div>
 
                     <div class = "modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Confirm</button>
-        <button type="button" class="btn btn-default">Back</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Confirm</button>
+                        <button type="button" class="btn btn-default" data-dismiss = "modal">Back</button>
                     </div>
                 </div>
             </div>
