added a modal when you submit challenges and links back to homepage after confirming

--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -121,7 +121,7 @@
 
                     <div class = "modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Confirm</button>
-                        <button type="button" class="btn btn-default" data-dismiss = "modal">Back</button>
+                        <button type="button" class="btn btn-default" data-dismiss = "modal">Cancel</button>
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
         <div class ="navbar navbar-default navbar-static-bottom">
             <div class="container-fluid">
                 <button type="button" class="btn btn-blue btn-lg pull-right" data-toggle="modal" 
-                data-target = ".bs-example-modal-lg" id="submit"> Submit </button>
+                data-target=".bs-example-modal-lg" id="submit"> Submit </button>
                 <button type="button" class="btn btn-blue btn-lg pull-right" id="revert"> Revert </button>
             </div>
         </div>
