--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -106,22 +106,22 @@
         <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
-                    <div class = "modal-header">
-                        <h4 class = "text-center">Accept/Decline Confirmation</h4>
+                    <div class="modal-header">
+                        <h4 class="text-center">Accept/Decline Confirmation</h4>
                     </div>
 
-                    <div class = "modal-body text-center">
-                        <ul style = "list-style-type: none;">
-                            <li><span class="glyphicon glyphicon-ok"></span>You accepted Ted's challenge</li>
-                            <li><span class="glyphicon glyphicon-remove"></span>You declined Elaine's challenge</li>
-                            <li><span class="glyphicon glyphicon-ok"></span>You accepted Kevin's challenge</li>
+                    <div class="modal-body text-center">
+                        <ul style="list-style-type: none;">
+                            <li><span class="glyphicon glyphicon-ok-sign"></span>You accepted Ted's challenge</li>
+                            <li><span class="glyphicon glyphicon-remove-sign"></span>You declined Elaine's challenge</li>
+                            <li><span class="glyphicon glyphicon-ok-sign"></span>You accepted Kevin's challenge</li>
                         </ul>
 
                     </div>
 
-                    <div class = "modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Confirm</button>
-                        <button type="button" class="btn btn-default" data-dismiss = "modal">Cancel</button>
+                    <div class="modal-footer">
+                        <a href="homepage.html"><button type="button" class="btn btn-primary" data-dismiss="modal">Confirm</button></a>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
