changed color scheme

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
         <div class="container-fluid">
             <div class = "text-center">
-                <img id = "logo" src = "imgs/logofinals.jpg" style = "max-width: 100%">
+                <img id = "logo" src = "imgs/logofinalforreal.jpg" style = "max-width: 100%">
             </div>
             <br>
                 <div class="text-left" id="motive-descr">
