--- a/stats.html
+++ b/stats.html
@@ -33,7 +33,7 @@
         <div class="container-fluid">
              <div class="row">
                 <div class="col-md-4 text-center col-md-offset-4">
-                    <a href="homepage.html"> <img class="logo" src="imgs/logofinals.jpg"> </a>
+                    <a href="homepage.html"> <img class="logo" src="imgs/logofinalforreal.jpg"> </a>
             </div>
             
             <div class = "col-md-4 col-md-offset-4">
