--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -41,7 +41,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4 text-center col-md-offset-4">
-                    <a href="homepage.html"> <img class="logo" src="imgs/logofinals.jpg"> </a>
+                    <a href="homepage.html"> <img class="logo" src="imgs/logofinalforreal.jpg"> </a>
                     <span class="text-left"> Accept/Decline Challenges:</span> </br>
                 </div>
             </div>
