--- a/challenge-friendsearch.html
+++ b/challenge-friendsearch.html
@@ -37,7 +37,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="text-center col-md-4 col-md-offset-4">
-                    <a href="homepage.html"> <img class="logo" src="imgs/logofinals.jpg"> </a>
+                    <a href="homepage.html"> <img class="logo" src="imgs/logofinalforreal.jpg"> </a>
                 </div>
             </div>
             <div class="row">
