--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class = "text-center">
-                <img id = "logo" src = "imgs/logofinals.jpg" style = "max-width: 100%">
+                <img id = "logo" src = "imgs/logofinalforreal.jpg" style = "max-width: 100%">
             </div>
             </div>
             <div class="row">
