changed header text

--- a/challenge-createchallenge.html
+++ b/challenge-createchallenge.html
@@ -42,7 +42,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 text-center col-md-offset-4">
-                    <span class="text-left">SELECT A CHALLENGE:</span>
+                    <span class="text-left">SELECT CHALLENGE(S):</span>
                     <br>
                     <br>
                     <span class="btn-label btn btn-default buttonsize btn-blk">Run 3 Miles</span>
