--- a/index.html
+++ b/index.html
@@ -21,9 +21,72 @@
     </head>
 
     <body>
+        <nav class="navbar nav-default" id="top-nav" role="navigation">
+            <div class="container-fluid">
+                <a href="homepage.html">
+                    <span class="glyphicon glyphicon-home icons"></span>
+                </a>
+                <a href="settings.html">
+                    <a href = "login.html" class = "btn btn-blk pull-right" id="white-text">Login</a>
+                </a>
+            </div>
+        </nav>
+
         <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4 text-center col-md-offset-4">
+                    <a href="homepage.html"> <img class="logo" src="imgs/logofinals.jpg"> </a>
+                    <div id="descr">Challenge your way to a healthier lifestyle</div>
+                    <div class="carousel slide" id="carousel" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel" data-slide-to="1"></li>
+                            <li data-target="#carousel" data-slide-to="2"></li>
+                        </ol>
+
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img src="imgs/screenshot.png" alt="challenge a friend" class="image-responsive">
+                                <div class="carousel-caption">
+                                    <h3> 
+                                        <span class="glyphicon glyphicon-fire pull-left icons" style="color: #D8403A"></span>
+                                        Challenge your friends
+                                    </h3>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="imgs/screenshot.png" alt="gloating rights" class="image-responsive">
+                                <div class="carousel-caption">
+                                    <h3>
+                                        <span class="glyphicon glyphicon-tower pull-left icons"></span>
+                                        <span style="color: black">Gloating rights</span>
+                                    </h3>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="imgs/screenshot.png" alt="track your progress" class="image-responsive">
+                                <div class="carousel-caption">
+                                    <h3>
+                                        <span class="glyphicon glyphicon-ok pull-left icons" style="color: #59D840"></span>
+                                        <span style="color: #59D840">Track your progress</span>
+                                    </h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <a class="carousel-control left" href="#carousel" data-slide="prev">
+                            <span class="icon-prev"></span>
+                        </a>
+
+                        <a class="carousel-control right" href="#carousel" data-slide="next">
+                            <span class="icon-next"></span>
+                        </a>
+                    </div>
+            </div>
+        </div>
+        <!-- <div class="container-fluid">
             <div class = "text-center">
-                <img id = "logo" src = "imgs/logofinals.jpg" style = "max-width: 100%">
+                
             </div>
             <br>
                 <div class="text-left" id="motive-descr">
@@ -66,7 +129,7 @@
 
         <div class="text-center">
             <a href="login.html"> <button type="button" class="btn" id="login"> >> Continue </button> </a>
-        </div>
+        </div> -->
 
     </body>
 
