changed buttons for confirmation

--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -120,8 +120,8 @@
                     </div>
 
                     <div class="modal-footer">
-                        <a href="homepage.html"><button type="button" class="btn btn-primary" data-dismiss="modal">Confirm</button></a>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <a href="homepage.html"><button type="button" class="btn btn-blue" data-dismiss="modal">Confirm</button></a>
+                        <button type="button" class="btn btn-blue" data-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
