changed colors of glyphicons and added spaces

--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -112,9 +112,9 @@
 
                     <div class="modal-body text-center">
                         <ul style="list-style-type: none;">
-                            <li><span class="glyphicon glyphicon-ok-sign"></span>You accepted Ted's challenge</li>
-                            <li><span class="glyphicon glyphicon-remove-sign"></span>You declined Elaine's challenge</li>
-                            <li><span class="glyphicon glyphicon-ok-sign"></span>You accepted Kevin's challenge</li>
+                            <li><span class="glyphicon glyphicon-ok-sign green"></span>&nbsp; You accepted Ted's challenge</li>
+                            <li><span class="glyphicon glyphicon-remove-sign red" ></span>&nbsp; You declined Elaine's challenge</li>
+                            <li><span class="glyphicon glyphicon-ok-sign green"></span>&nbsp; You accepted Kevin's challenge</li>
                         </ul>
 
                     </div>
