--- a/challenge-challengeconfirm.html
+++ b/challenge-challengeconfirm.html
@@ -72,8 +72,8 @@
                     </div>
 
                     <div class="modal-footer">
-                        <a href = "homepage.html"><button type="button" class="btn btn-primary">Confirm</button></a>
-                        <button type="button" class="btn btn-default" data-dismiss = "modal">Cancel</button>
+                        <a href = "homepage.html"><button type="button" class="btn btn-blue">Confirm</button></a>
+                        <button type="button" class="btn btn-blue" data-dismiss = "modal">Cancel</button>
                     </div>
                 </div>
             </div>
