--- a/progress.html
+++ b/progress.html
@@ -101,8 +101,8 @@
                                 </div>
                             </li>
                         </ul>
-                        <div class="progress bottom-nav">
-                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                        <div class="progress progress-striped active bottom-nav">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
                                 <span class="sr-only">80% Complete</span>
                             </div>
                         </div>
