fixed border radius

--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -53,7 +53,7 @@
                             <b>Ted Wu</b> challenges you to:
                             <br/> Bench 100 pounds
                         </p>
-                        <div class="btn-group pull-right">
+                        <div class="pull-right">
                             <br/><br/>
                             <button type="button" class="btn btn-blk" value="00">
                                 Accept
@@ -70,7 +70,7 @@
                             <b>Elaine Chang</b> challenges you to:
                             <br/> Run 3 miles
                         </p>
-                        <div class="btn-group pull-right">
+                        <div class="pull-right">
                             <br/><br/>
                             <button type="button" class="btn btn-blk" value="10">
                                 Accept
@@ -87,11 +87,11 @@
                             <b>Kevin Chen</b> challenges you to:
                             <br/> Go to the gym 4 times a week
                         </p>
-                        <div class="btn-group pull-right">
+                        <div class="pull-right">
                             <br/><br/>
                             <button type="button" class="btn btn-blk" value="20">
                                 Accept
-                            </button></br></br>
+                            </button><br><br>
                             <button type="button" class="btn btn-blk" value="21">
                                 Decline
                             </button>
