design changes and slider image 1

--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
     <body>
         <nav class="navbar nav-default" id="top-nav" role="navigation">
             <div class="container-fluid">
-                <a href="homepage.html">
-                    <span class="glyphicon glyphicon-home icons"></span>
-                </a>
                 <a href="settings.html">
                     <a href = "login.html" class = "btn btn-blk pull-right" id="white-text">Login</a>
                 </a>
@@ -35,7 +32,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4 text-center col-md-offset-4">
-                    <a href="homepage.html"> <img class="logo" src="imgs/logofinals.jpg"> </a>
+                    <a href="homepage.html"> <img class="logo" src="imgs/logofinalforreal.jpg"> </a>
                     <div id="descr">Challenge your way to a healthier lifestyle</div>
                     <div class="carousel slide" id="carousel" data-ride="carousel">
                         <ol class="carousel-indicators">
@@ -46,30 +43,24 @@
 
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img src="imgs/screenshot.png" alt="challenge a friend" class="image-responsive">
-                                <div class="carousel-caption">
-                                    <h3> 
-                                        <span class="glyphicon glyphicon-fire pull-left icons" style="color: #D8403A"></span>
-                                        Challenge your friends
-                                    </h3>
+                                <img src="imgs/splash1.jpg" alt="challenge a friend" class="image-responsive">
+                                <div class="carousel-caption text-left">
+                                    <!-- <span class="glyphicon glyphicon-fire pull-left icons" style="color: #D8403A"></span> -->
+                                    <h3>Challenge friends</h3>
                                 </div>
                             </div>
                             <div class="item">
                                 <img src="imgs/screenshot.png" alt="gloating rights" class="image-responsive">
-                                <div class="carousel-caption">
-                                    <h3>
-                                        <span class="glyphicon glyphicon-tower pull-left icons"></span>
-                                        <span style="color: black">Gloating rights</span>
-                                    </h3>
+                                <div class="carousel-caption text-left">
+                                    <!-- <span class="glyphicon glyphicon-tower pull-left icons"></span> -->
+                                    <h3>Gloating rights</h3>
                                 </div>
                             </div>
                             <div class="item">
                                 <img src="imgs/screenshot.png" alt="track your progress" class="image-responsive">
-                                <div class="carousel-caption">
-                                    <h3>
-                                        <span class="glyphicon glyphicon-ok pull-left icons" style="color: #59D840"></span>
-                                        <span style="color: #59D840">Track your progress</span>
-                                    </h3>
+                                <div class="carousel-caption text-left">
+                                    <!-- <span class="glyphicon glyphicon-ok pull-left icons" style="color: #59D840"></span> -->
+                                    <h3>Track progress</h3>
                                 </div>
                             </div>
                         </div>
@@ -83,53 +74,7 @@
                         </a>
                     </div>
             </div>
-        </div>
-        <!-- <div class="container-fluid">
-            <div class = "text-center">
-            </div>
-            <br>
-                <div class="text-left" id="motive-descr">
-                    #Motivate is a mobile application that fosters a community of people who enjoy fitness challenges and healthy competition. The application allows people to challenge their friends or family members to reach specific fitness goals. Users can also update their progress everyday to keep track of their fitness routines. Start challenging your friend today!
-                </div>
-        </div>
-        <br>
-        <div class = "container-fluid">
-            <div class="col-xs-12">
-                <div class="thumbnail">
-                    <div class="caption">
-                        <h3> <span class="glyphicon glyphicon-fire pull-left icons" style="color: #D8403A"></span>Challenge your friends</h3>
-                        <p class = "textbox"><center><img src="imgs/screenshot.png" style="max-width:75%"></center></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class = "container-fluid">
-            <div class="col-xs-12">
-                <div class="thumbnail">
-                    <div class="caption">
-                        <h3> <span class="glyphicon glyphicon-tower pull-left icons"></span>Gloating rights</h3>
-                            <p class = "textbox"><center><img src="imgs/screenshot.png" style="max-width:75%"></center></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class = "container-fluid">
-            <div class="col-xs-12">
-                <div class="thumbnail">
-                    <div class="caption">
-                        <h3><span class="glyphicon glyphicon-ok pull-left icons" style="color: #59D840"></span>Track your progress</h3>
-                        <p class = "textbox"><center><img src="imgs/screenshot.png" style="max-width:75%"></center></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="text-center">
-            <a href="login.html"> <button type="button" class="btn" id="login"> >> Continue </button> </a>
-        </div> -->
-
+        </div>  
     </body>
 
 </html>
