changed background of confirmation: g
g
rg
g
dg
s
d

exit

q
e

--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -105,9 +105,9 @@
 
         <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
-                <div class="modal-content">
+                <div class="modal-content" id="confirmation">
                     <div class="modal-header">
-                        <h4 class="text-center">Accept/Decline Confirmation</h4>
+                        <h4 class="text-center"><b>Accept/Decline Confirmation</b></h4>
                     </div>
 
                     <div class="modal-body text-center">
