--- a/challenge-challengeconfirm.html
+++ b/challenge-challengeconfirm.html
@@ -20,6 +20,12 @@
         <script type="text/javascript" src="js/bootstrap.js"></script>
         <script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
         <script type="text/javascript" src="js/challenge-fs.js"> </script>
+
+        <style>
+            #confirmation {
+                background-color: #E8E8E8;
+            }
+        </style>
     </head>
 
     <body>
@@ -62,9 +68,9 @@
 
         <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
-                <div class="modal-content">
+                <div class="modal-content" id="confirmation">
                     <div class="modal-header">
-                        <h4 class="text-center">Challenge Confirmation</h4>
+                        <h4 class="text-center"><b>Challenge Confirmation</b></h4>
                     </div>
 
                     <div class="modal-body text-center">
