--- a/stats.html
+++ b/stats.html
@@ -40,7 +40,7 @@
                 <div class="thumbnail col-md-4 col-md-offset-4">
                     <div class="container-fluid">
                         <img class="img-rounded prof-pic pull-left" src="imgs/ted.jpg" ></img>
-                        <div id="user-stats"><center><br/><b>Overall</b></br>Wins: 43<br/>Losses: 20</center></div>                                      
+                        <div><center><br/><b>Overall</b></br>Wins: 43<br/>Losses: 20</center></div>                                      
                     </div>   
                         
                 </div>
