added slider image 2

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <img src="imgs/screenshot.png" alt="gloating rights" class="image-responsive">
+                                <img src="imgs/splash2.jpg" alt="gloating rights" class="image-responsive">
                                 <div class="carousel-caption text-left">
                                     <!-- <span class="glyphicon glyphicon-tower pull-left icons"></span> -->
                                     <h3>Gloating rights</h3>
