--- a/progress.html
+++ b/progress.html
@@ -27,7 +27,8 @@
             buttonText: function() {
                 return 'Update <b class="caret"></b>'
             },
-            buttonClass: 'btn btn-xs btn-blk'
+            buttonClass: 'btn btn-xs btn-blk',
+            dropRight: true
         });
       });
     </script>
