removing exclamation pointsgit add .git add .git add .

--- a/progress.html
+++ b/progress.html
@@ -74,7 +74,7 @@
                                 Bench 100 lbs
                                 <div class="pull-right">
                                     <select class="multiselect" multiple="multiple">
-                                      <option value="Benched 100 lbs!">Benched 100 lbs!</option>
+                                      <option value="Benched 100 lbs!">Benched 100 lbs</option>
                                     </select>
                                 </div>
                             </li>
@@ -94,10 +94,10 @@
                                 <div class="pull-right">
                                     <select class="multiselect" multiple="multiple">
                                       <option value="10">10 pushups</option>
-                                      <option value="20">20 pushups!</option>
-                                      <option value="30">30 pushups!</option>
-                                      <option value="40">40 pushups!!</option>
-                                      <option value="50">50 pushups!!!</option>
+                                      <option value="20">20 pushups</option>
+                                      <option value="30">30 pushups</option>
+                                      <option value="40">40 pushups</option>
+                                      <option value="50">50 pushups</option>
                                     </select>
                                 </div>
                             </li>
