--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4 text-center col-md-offset-4">
-                    <a href="homepage.html"> <img class="logo" src="imgs/logofinalforreal.jpg"> </a>
+                    <img class="logo" src="imgs/logofinalforreal.jpg">
                     <div id="descr">Challenge your way to a healthier lifestyle</div>
                     <div class="carousel slide" id="carousel" data-ride="carousel">
                         <ol class="carousel-indicators">
@@ -57,7 +57,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <img src="imgs/screenshot.png" alt="track your progress" class="image-responsive">
+                                <img src="imgs/splash3.jpg" alt="track your progress" class="image-responsive">
                                 <div class="carousel-caption text-left">
                                     <!-- <span class="glyphicon glyphicon-ok pull-left icons" style="color: #59D840"></span> -->
                                     <h3>Track progress</h3>
