added signup page

--- a/challenge-challengeconfirm.html
+++ b/challenge-challengeconfirm.html
@@ -30,7 +30,7 @@
 
     <body>
     <script>
-    	$('#myModal').modal(options)
+    	$('#myModal').modal()
     </script>
         <nav class="navbar nav-default" id="top-nav" role="navigation">
             <div class="container-fluid">
