--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class = "text-center">
                 <img id = "logo" src = "imgs/logofinalforreal.jpg" style = "max-width: 100%">
-            </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
@@ -34,7 +34,9 @@
                             <div class="row"><input type="password" placeholder="Password"></div>
                         </form>
                         <a href="homepage.html"><button id = "login" class = "btn btn-blue btn-lg"  class="btn btn-success" type="submit">Log In</button></a>
-                        <button  id = "signup"class = "btn btn-blue btn-lg"  class="btn btn-success" type="submit">Sign Up</button>
+                        <a href="signup.html"><button  id = "signup"class = "btn btn-blue btn-lg"  class="btn btn-success" type="submit">Sign Up</button></a>
+                        <br/>
+                        <br/>
                     </div>
                 </div>
             </div>
