added data toggle to facebook-connect and added check / x icons for tips

--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
             <br/>
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
-                    <a href="#" class="btn-fb"> Connect with Facebook </a>
+                    <button class="btn-fb" data-toggle="modal" data-target=".bs-example-modal-lg"> Connect with Facebook </button>
                     <br/>
                     or
                     <br/>
@@ -53,8 +53,8 @@
                                 <div class="field-name"> Email Address </div>
                                 <div class="sidetip">
                                     <p class="tip"> What's your email address? </p>
-                                    <p class="done"> Validated email address. </p>
-                                    <p class="error"> That's not an email address. </p>
+                                    <p class="done"> Validated email. </p>
+                                    <p class="error"> That seems off. </p>
                                 </div>
                                 <input id="input-email" type="text" autocomplete="off">
                             </div> 
@@ -63,7 +63,7 @@
                                 <div class="field-name"> Create a password </div>
                                 <div class="sidetip">
                                     <p class="tip"> Make a secure password!</p>
-                                    <p class="done"> Nice password. </p>
+                                    <p class="done"> Good password. </p>
                                     <p class="error"> At least 6 characters! </p>
                                 </div>
                                 <input id="input-pw" type="password">
@@ -72,7 +72,7 @@
                     </form>
                     <br/>
                     <br/>
-                    <button  class = "btn btn-green" disabled="true" data-toggle="modal" data-target = ".bs-example-modal-lg"class="btn btn-success">Create my account!</button>
+                    <button  class = "btn btn-green" disabled="true" data-toggle="modal" data-target = ".bs-example-modal-lg">Create my account!</button>
                 </div>
             </div>
         </div>
